--- a/templates/config.rb.j2
+++ b/templates/config.rb.j2
@@ -7,13 +7,13 @@
 # Config Options
 #
 # Sets the root path for all relative paths, including default paths.
-root_path '{{ root_path }}'
+root_path '{{ backup_root_path }}'
 #
 # Sets the path where backups are processed until they're stored.
-tmp_path  '{{ tmp_path }}'
+tmp_path  '{{ backup_tmp_path }}'
 #
 # Sets the path where backup stores persistent information.
-data_path '{{ data_path }}'
+data_path '{{ backup_data_path }}'
 
 ##
 # Utilities
